<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="8dp"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/textViewBudgetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Daniel's Budget" />

        <TextView
            android:id="@+id/textViewEstimatedMonthlyIncomeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/estimated_monthly_income"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextEstimatedMonthlyIncome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextEstimatedMonthlyIncome" />

        <EditText
            android:id="@+id/editTextEstimatedMonthlyIncome"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:hint="@string/amount"
            android:layout_marginStart="8dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewEstimatedMonthlyIncomeLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewBudgetName" />

        <TextView
            android:id="@+id/textViewBudgetSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/budget_summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEstimatedMonthlyIncome" />

        <TextView
            android:id="@+id/textViewCurrentMonthlyIncomeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/current_monthly_income"
            app:layout_constraintEnd_toStartOf="@+id/textViewCurrentMonthlyIncome"
            app:layout_constraintTop_toBottomOf="@+id/textViewBudgetSummary" />

        <TextView
            android:id="@+id/textViewCurrentMonthlyIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/currency_zero"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewCurrentMonthlyIncomeLabel" />

        <TextView
            android:id="@+id/textViewCurrentMonthlySpentLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/current_monthly_spent"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@+id/textViewCurrentMonthlyIncomeLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentMonthlyIncomeLabel" />

        <TextView
            android:id="@+id/textViewCurrentMonthlySpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/currency_zero"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentMonthlyIncome" />

        <TextView
            android:id="@+id/textViewBalanceLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/balance"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="@+id/textViewCurrentMonthlySpentLabel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewCurrentMonthlySpentLabel"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/currency_zero"
            app:layout_constraintBottom_toBottomOf="@+id/textViewBalanceLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewBalanceLabel" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/textViewCurrentMonthlySpent"
            app:layout_constraintStart_toStartOf="@+id/textViewCurrentMonthlySpentLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentMonthlySpentLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>