<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarAddItem"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextItemLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/label"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextItemValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAmount" />

        <EditText
            android:id="@+id/editTextItemValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxEms="10"
            android:minHeight="48dp"
            android:minEms="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAmount"
            tools:text="$0.00" />

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarAddItem" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:checkedButton="@+id/toggleButtonIncome"
            app:layout_constraintTop_toBottomOf="@+id/editTextItemLabel">

            <Button
                android:id="@+id/toggleButtonIncome"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <Button
                android:id="@+id/toggleButtonExpense"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                android:text="@string/expense" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <ImageButton
            android:visibility="gone"
            android:id="@+id/imageButtonDeleteItem"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            android:scaleType="fitCenter"
            android:contentDescription="@string/delete_item"
            android:background="@android:color/transparent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>