<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayoutMonthlyIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/background_border"
            app:layout_constraintEnd_toStartOf="@+id/relativeLayoutSpent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewIncomeHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:text="@string/monthly_income"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewIncomeHeadline"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/currency_zero" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutSpent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:background="@drawable/background_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/relativeLayoutMonthlyIncome"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewSpentHeadline"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/spent"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/textViewSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewSpentHeadline"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/currency_zero" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:progressTint="@android:color/holo_red_dark"
            android:secondaryProgressTint="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutSpent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewBudgetCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <Button
                    android:id="@+id/buttonAddCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_category"
                    android:layout_marginBottom="16dp"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>